--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/backgroundnewpic.webp") top center;
+  background: url("../images/backgroundnewpic.webp") top center;
   background-size: cover;
 }
 
